--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css\style.css">
+    <script src="https://kit.fontawesome.com/045bd16cf0.js" crossorigin="anonymous"></script>
     <title>Random-Password-Genarator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Random Password Generator</h2>
+        <div class="view-password">
+            <input type="text" id="Password" placeholder="Randome Password" readonly>
+            <i class="fa-regular fa-copy"></i>
+        </div>
+        <button>Genarate</button>
+    </div>
+    <alert-container>
+        
+    </alert-container>
 </body>
 </html>
