--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <h2>Random Password Generator</h2>
+        <h1>Random Password Generator</h1>
         <div class="view-password">
             <input type="text" id="Password" placeholder="Randome Password" readonly>
             <i class="fa-regular fa-copy"></i>
         </div>
-        <button>Genarate</button>
+    <button class="btn">Genarate</button>
     </div>
-    <alert-container>
-        
-    </alert-container>
+    <div class="alert-container">
+        Password Copied !
+    </div>
+  
 </body>
 </html>
