--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
     <button class="btn">Genarate</button>
     </div>
-    <div class="alert-container">
+    <div class="active alert-container">
         Password Copied !
     </div>
-  
+    <script src="Script\index.js"></script>
 </body>
 </html>
